Revert "Another Push for Joseph"
This reverts commit c7c663dc5508df6290e83c765d8e56fa2411fdf2.

--- a/applications/WebMod/views/default/profile.html
+++ b/applications/WebMod/views/default/profile.html
@@ -105,7 +105,7 @@
                               {% #if isShareable === false %}
                                  Sharing Disabled,
                               {% /if %}
-                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
+                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}/{% name %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
                            </div>
                         </img>
                      <div>
@@ -136,10 +136,10 @@
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isShareable === true %}
-                                 <a href="{{=URL('default', 'modeling')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">Import this Model</a><br>
+                                 Import this Model<br>
                               {% /if %}
                               {% #if isShareable === false %}
-                                 <a href="{{=URL('default', 'viewing')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">View this Model</a><br>
+                                 View this Model<br>
                               {% /if %}
                            </div>
                         </img>
@@ -190,7 +190,7 @@
                               {% #if isShareable === false %}
                                  Sharing Disabled,
                               {% /if %}
-                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
+                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}/{% name %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
                            </div>
                         </img>
                      <div>
@@ -221,10 +221,10 @@
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isShareable === true %}
-                                 <a href="{{=URL('default', 'modeling')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">Import this Model</a><br>
+                                 Import this Model<br>
                               {% /if %}
                               {% #if isShareable === false %}
-                                 <a href="{{=URL('default', 'viewing')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">View this Model</a><br>
+                                 View this Model<br>
                               {% /if %}
                            </div>
                         </img>
@@ -292,7 +292,7 @@
                               {% #if isShareable === false %}
                                  Sharing Disabled,
                               {% /if %}
-                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
+                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}/{% name %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
                            </div>
                         </img>
                      <div>
@@ -323,10 +323,10 @@
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isShareable === true %}
-                                 <a href="{{=URL('default', 'modeling')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">Import this Model</a><br>
+                                 Import this Model<br>
                               {% /if %}
                               {% #if isShareable === false %}
-                                 <a href="{{=URL('default', 'viewing')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">View this Model</a><br>
+                                 View this Model<br>
                               {% /if %}
                            </div>
                         </img>
@@ -373,7 +373,7 @@
                               {% #if isShareable === false %}
                                  Sharing Disabled,
                               {% /if %}
-                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
+                              <a href="{{=URL('default', 'modeling')}}/{% model_id %}/{% name %}" style="color:#D98200; text-decoration:none;">Edit<br></a>
                            </div>
                         </img>
                      <div>
@@ -404,10 +404,10 @@
                            <div style="color:gray;">
                               <i>created by: {% username %}</i><br>
                               {% #if isShareable === true %}
-                                 <a href="{{=URL('default', 'modeling')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">Import this Model</a><br>
+                                 Import this Model<br>
                               {% /if %}
                               {% #if isShareable === false %}
-                                 <a href="{{=URL('default', 'viewing')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">View this Model</a><br>
+                                 View this Model<br>
                               {% /if %}
                            </div>
                         </img>
