--- a/applications/WebMod/views/default/user.html
+++ b/applications/WebMod/views/default/user.html
@@ -23,7 +23,7 @@
 {{end}}
 </head>
 
-<body style="background: linear-gradient(#212229, #000000);">
+<body style="background: linear-gradient(#212229, #000000); padding:0px;">
 <h2 style="color:#D98200;">
 {{=T('Sign Up') if request.args(0) == 'register' else T('Log In') if request.args(0) == 'login' else T(request.args(0).replace('_',' ').title())}}
 </h2>
