Search Page Importing
Can now import models from search page

--- a/applications/WebMod/views/default/search.html
+++ b/applications/WebMod/views/default/search.html
@@ -57,8 +57,10 @@
                             <br><i class="fa fa-heart" style="color:#ff3333;"> {% favorites %}</i><br>
                             <div style="color:gray"><i>created by: {% auth %}</i></dv>
                             {% #if share === true %}
-                                 <a href="{{=URL('default', 'modeling')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">Import, </a>
                                  <a href="{{=URL('default', 'viewing')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">View</a><br>
+                                 {{if  auth.user_id:}}
+                                    <button style="color:#D98200; text-decoration:none;"  data-modelid="{% model_id %}" on-click="copyModel">Import</button><br>
+                                 {{pass}}
                               {% else %}
                                  <a href="{{=URL('default', 'viewing')}}/{% model_id %}" style="color:#D98200; text-decoration:none;">View</a><br>
                               {% /if %}
@@ -118,6 +120,20 @@
                         });
                     }
                 }
+            });
+
+            MAIN.on('copyModel', function(e){
+                var t = $(e.original.target);
+                var clicked_id = t.data('modelid');
+                $.ajax("{{=URL('default', 'copy_model')}}",
+                {
+                    data: {
+                        model_id: clicked_id
+                    },
+                    method: 'POST',
+                    success: function(data){
+                    }
+                });
             });
 
             MAIN.on("favoriteModel", function(e){
